--- a/templates/properties/tenancy_detail.html
+++ b/templates/properties/tenancy_detail.html
@@ -22,7 +22,7 @@
             </h2>
 
             <div class="actions">
-                <a href="#" class="btn-back">
+                <a href="{% url 'apartment_units' tenancy.unit.apartment.id %}" class="btn-back">
                     <i class="fa-solid fa-arrow-left"></i>
                     Back
                 </a>
