--- a/templates/dashboards/landlord_dashboard.html
+++ b/templates/dashboards/landlord_dashboard.html
@@ -15,6 +15,7 @@
     <div class="dashboard-header">
         <h1>Landlord Dashboard</h1>
         <a href="{% url 'apartment_list' %}">My Apartments</a>
+        <a href="{% url 'add_caretaker' %}">Add Caretaker</a>
     </div>
 
     <!-- Filter Form -->
