--- a/templates/accounts/add_caretaker.html
+++ b/templates/accounts/add_caretaker.html
@@ -11,6 +11,7 @@
 
 {% block content %}
 <div class="form-wrapper">
+  <i class="fa-solid fa-user-plus"></i>
     <h2>Add Caretaker</h2>
 
     <form method="post">
@@ -53,6 +54,7 @@
         </div>
 
         <button type="submit" class="submit-btn">
+          <i class="fa-solid fa-user-check"></i>
             Create Caretaker
         </button>
     </form>
