added my_profile.html template

--- a/templates/dashboards/caretaker_dashboard.html
+++ b/templates/dashboards/caretaker_dashboard.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 <title>Caretaker Dashboard</title>
-
+ 
 {% block extra_css %}
  <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -17,7 +17,7 @@
   <!-- Header -->
   <div class="dashboard-header">
       <i class="fa-solid fa-user-shield"></i>
-      <h1>Caretaker Dashboard</h1>
+      <h1>Welcome, {{ user.first_name }} {{ user.last_name }}</h1>
   </div>
 
     <!-- Assigned Apartments -->
