--- a/templates/payments/record_payment.html
+++ b/templates/payments/record_payment.html
@@ -27,7 +27,7 @@
 
         <div class="info-box">
             <span>Month</span>
-            <strong>{{ rent_record.month }}/{{ rent_record.year }}</strong>
+            <strong>{{ rent_record.month_name }}/{{ rent_record.year }}</strong>
         </div>
 
         <div class="info-box">
