--- a/templates/payments/rent_record_list.html
+++ b/templates/payments/rent_record_list.html
@@ -35,7 +35,7 @@
 
         <!-- Rent Record Row -->
         <tr>
-          <td>{{ record.month }}/{{ record.year }}</td>
+          <td>{{ record.month_name }}/{{ record.year }}</td>
           <td>KES {{ record.rent_amount }}</td>
           <td>KES {{ record.total_paid }}</td>
           <td>KES {{ record.balance }}</td>
