--- a/templates/accounts/my_profile.html
+++ b/templates/accounts/my_profile.html
@@ -5,7 +5,7 @@
 
 {% block extra_css %}
 <!-- CSS -->
-<link rel="stylesheet" href="{% static 'accounts/css/add_caretaker.css' %}">
+<link rel="stylesheet" href="{% static 'accounts/css/my_profile.css' %}">
 
 <!-- Font Awesome -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
