--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,8 @@
 </head>
 <body> 
     <header>
-        <a href="{% url 'landlord_dashboard' %}" class="home">Home</a>
+        <a href="{% url 'home' %}" class="home">Home</a>
+        <a href="{% url 'my_profile' %}" class="profile">My Profile</a>
 
         {% if user.is_authenticated %}
         <form action="{% url 'logout' %}" method="post" style="display: inline;">
