--- a/templates/accounts/my_profile.html
+++ b/templates/accounts/my_profile.html
@@ -55,9 +55,14 @@
                 Update Profile
             </button>
 
+            <a href="{% url 'update_password' %}" class="update-link">
+                Update Password
+            </a>
+
             <a href="#" class="back-link">
                 <i class="fa-solid fa-arrow-left"></i> Back
             </a>
+
         </div>
     </form>
 </div>
