--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap icons-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="{% static 'global/css/base.css' %}">
+    
     <title>{% block title %}Rental System{% endblock %}</title>
     {% block extra_css %}
     {% endblock %}
