--- a/templates/properties/apartment_edit_form.html
+++ b/templates/properties/apartment_edit_form.html
@@ -10,7 +10,13 @@
 <div class="container">
 
     <div class="page-header">
-        <h2>Edit Apartment</h2>
+        <h2>
+            {% if form.instance.pk %}
+                Edit Apartment
+            {% else %}
+                Add Apartment
+            {% endif %}
+        </h2>
     </div>
 
     <div class="form-card">
